--- a/ansible/upgrade.yml
+++ b/ansible/upgrade.yml
@@ -2,375 +2,9 @@
 - name: upgrade opp
   hosts: opp_prod
   gather_facts: no
+  vars_files:
+    - vars/app_vars.yml
   tasks:
-    - name: copy krb5 conf
-      ansible.builtin.copy:
-        src: /etc/krb5.conf
-        dest: /etc/krb5.conf
-      tags: copy_krb5_conf
-    - name: copy krb5 j2 conf
-      ansible.builtin.copy:
-        src: /etc/krb5.conf.j2
-        dest: /etc/krb5.conf.j2
-      tags: copy_krb5_j2_conf
-    - name: download headers-more-nginx-module-0.34
-      get_url:
-        url: https://github.com/openresty/headers-more-nginx-module/archive/refs/tags/v0.34.tar.gz
-        dest: "{{ software_src_path }}/headers-more-nginx-module-0.34.tar.gz"
-      delegate_to: localhost
-      run_once: true
-      tags: download_headers_more_nginx_module_0_34
-    - name: copy headers-more-nginx-module.tar.gz
-      ansible.builtin.copy:
-        src: "{{ software_src_path }}/headers-more-nginx-module-0.34.tar.gz"
-        dest: "{{ software_dest_path }}/headers-more-nginx-module-0.34.tar.gz"
-      tags: copy_headers_more_nginx_module
-    - name: headers-more-nginx-module-unarchive
-      unarchive:
-        src: "{{ software_dest_path }}/headers-more-nginx-module-0.34.tar.gz"
-        dest: "{{ software_dest_path }}"
-        remote_src: yes
-      tags: headers_more_nginx_module_unarchive
-    - name: download nginx-1.2.5.tar.gz
-      get_url:
-        url: https://nginx.org/download/nginx-1.25.5.tar.gz
-        dest: "{{ software_src_path }}/nginx-1.25.5.tar.gz"
-      delegate_to: localhost
-      run_once: true
-      tags: download_nginx_1_2_5
-    - name: copy nginx-1.2.5.tar.gz
-      ansible.builtin.copy:
-        src: "{{ software_src_path }}/nginx-1.25.5.tar.gz"
-        dest: "{{ software_dest_path }}/nginx-1.25.5.tar.gz"
-      tags: copy_nginx
-    - name: nginx-unarchive
-      unarchive:
-        src: "{{ software_dest_path }}/nginx-1.25.5.tar.gz"
-        dest: "{{ software_dest_path }}"
-        remote_src: yes
-      tags: nginx_unarchive
-    - name: add nginx account
-      ansible.builtin.user:
-        name: nginx
-        shell: /bin/false
-        create_home: no
-        state: present
-        system: yes
-      tags: add_nginx_account
-    - name: add nginx to squid group
-      ansible.builtin.user:
-        name: nginx
-        groups: squid
-        append: yes
-      tags: add_nginx_squid_group
-    - name: nginx service start init
-      ansible.builtin.systemd:
-        name: nginx
-        state: started
-        enabled: yes
-      tags: nginx_service_start_init
-    - name: add www-group
-      ansible.builtin.group:
-        name: www-group
-        state: present
-      tags: add_www_group
-    - name: add nginx to www-group
-      ansible.builtin.user:
-        name: nginx
-        groups: www-group
-        append: yes
-      tags: add_nginx_www_group
-    - name: nginx-configure
-      shell: |
-        ./configure --user=nginx --group=nginx --prefix=/opt/nginx \
-            --with-cc-opt=-O2 \
-            --with-http_ssl_module \
-            --with-http_v2_module \
-            --with-http_sub_module \
-            --with-http_stub_status_module \
-            --with-threads \
-            --with-compat \
-            --add-module=../headers-more-nginx-module-0.34 \
-            --sbin-path=/opt/nginx/sbin/nginx \
-            --conf-path=/opt/nginx/conf/nginx.conf \
-            --with-stream \
-            --without-pcre2 \
-            --with-stream_ssl_module \
-            --with-stream_ssl_preread_module
-      args:
-        chdir: "{{ software_dest_path }}/nginx-1.25.5"
-      tags: nginx_configure
-    - name: nginx-compile
-      shell: make && make install
-      args:
-        chdir: "{{ software_dest_path }}/nginx-1.25.5"
-      tags: nginx_compile
-    - name: nginx service create
-      ansible.builtin.copy:
-        dest: /etc/systemd/system/nginx.service
-        owner: root
-        group: root
-        mode: '0644'
-        content: |
-          [Unit]
-          Description=The nginx HTTP and reverse proxy server
-          After=network.target remote-fs.target nss-lookup.target
-          
-          [Service]
-          Type=forking
-          PIDFile=/opt/nginx/logs/nginx.pid
-          ExecStartPre=/opt/nginx/sbin/nginx -t
-          ExecStart=/opt/nginx/sbin/nginx
-          ExecReload=/opt/nginx/sbin/nginx -s reload
-          ExecStop=/bin/kill -s QUIT $MAINPID
-          PrivateTmp=true
-          
-          [Install]
-          WantedBy=multi-user.target
-      notify: reload systemd
-      tags: nginx_service_create
-    - name: download epel
-      get_url:
-        url: https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
-        dest: "{{ software_src_path }}/epel-release-latest-8.noarch.rpm"
-      delegate_to: localhost
-      run_once: true
-      tags: download_epel
-    - name: copy epel
-      ansible.builtin.copy:
-        src: "{{ software_src_path }}/epel-release-latest-8.noarch.rpm"
-        dest: "{{ software_dest_path }}/epel-release-latest-8.noarch.rpm"
-      tags: copy_epel
-    - name: download remi
-      get_url:
-        url: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
-        dest: "{{ software_src_path }}/remi-release-8.rpm"
-      delegate_to: localhost
-      run_once: true
-      tags: download_remi
-    - name: copy remi
-      ansible.builtin.copy:
-        src: "{{ software_src_path }}/remi-release-8.rpm"
-        dest: "{{ software_dest_path }}/remi-release-8.rpm"
-      tags: copy_remi
-    - name: install repo
-      ansible.builtin.dnf:
-        name:
-          - https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
-          - https://rpms.remirepo.net/enterprise/remi-release-8.rpm
-        state: present  
-        disable_gpg_check: yes
-      environment: "{{ proxy_env }}"
-      become: yes
-      tags: install_repo
-    - name: reset php
-      ansible.builtin.dnf:
-        name: php
-        state: present
-      tags: reset_php
-    - name: enable php
-      ansible.builtin.dnf:
-        name: "@php:remi-7.4"
-        state: present
-      tags: enable_php
-    - name: install php dnf
-      dnf:
-        name:
-          - php
-          - php-bcmath
-          - php-cli
-          - php-common
-          - php-dba
-          - php-dbg
-          - php-devel
-          - php-embedded
-          - php-enchant
-          - php-fpm
-          - php-gd
-          - php-gmp
-          - php-intl
-          - php-json
-          - php-ldap
-          - php-mbstring
-          - php-mysqlnd
-          - php-odbc
-          - php-opcache
-          - php-pdo
-          - php-pear
-          - php-pecl-apcu
-          - php-pecl-apcu-devel
-          - php-pgsql
-          - php-process
-          - php-recode
-          - php-snmp
-          - php-soap
-          - php-xml
-          - php-xmlrpc
-          - openssl
-          - openldap-clients
-          - mod_ssl
-          - php-redis
-        state: present
-      tags: install_dnf_php_package
-    - name: change php-fpm user
-      ansible.builtin.replace:
-        path: /etc/php-fpm.d/www.conf
-        regexp: 'user = apache'
-        replace: 'user = nginx'
-      tags: change_php_fpm_user
-    - name: change php-fpm group
-      ansible.builtin.replace:
-        path: /etc/php-fpm.d/www.conf
-        regexp: 'group = apache'
-        replace: 'group = nginx'
-      tags: change_php_fpm_group
-      notify: reload systemd
-    - name: php-fpm service start
-      ansible.builtin.systemd:
-        name: php-fpm
-        state: started
-        enabled: yes
-      tags: php_fpm_service_start
-    - name: download redis-5.0.3
-      get_url:
-        url: https://download.redis.io/releases/redis-5.0.3.tar.gz
-        dest: "{{ software_src_path }}/redis-5.0.3.tar.gz"
-      delegate_to: localhost
-      run_once: true
-      tags: download_redis_5_0_3
-    - name: copy redis-5.0.3.tar.gz
-      ansible.builtin.copy:
-        src: "{{ software_src_path }}/redis-5.0.3.tar.gz"
-        dest: "{{ software_dest_path }}/redis-5.0.3.tar.gz"
-      tags: copy_redis
-    - name: redis-unarchive
-      unarchive:
-        src: "{{ software_dest_path }}/redis-5.0.3.tar.gz"
-        dest: "{{ software_dest_path }}"
-        remote_src: yes
-      tags: redis_unarchive
-    - name: redis server compile
-      shell: make USE_SYSTEMD=yes && make install
-      args:
-        chdir: "{{ software_dest_path }}/redis-5.0.3"
-      tags: redis_server_compile
-    - name: redis service create
-      ansible.builtin.copy:
-        dest: /etc/systemd/system/redis.service
-        owner: root
-        group: root
-        mode: '0644'
-        content: |
-          [Unit]
-          Description=Redis persistent key-value database
-          After=network.target
-          
-          [Service]
-          Type=notify
-          ExecStart=/usr/local/bin/redis-server /etc/redis.conf
-          ExecStop=/usr/local/bin/redis-cli -p 6379 -a StrongP@@ssw0rd123! shutdown
-          Restart=always
-          User=redis
-          Group=redis
-          RuntimeDirectory=redis
-          RuntimeDirectoryMode=0755
-          PIDFile=/run/redis/redis-server.pid
-          
-          [Install]
-          WantedBy=multi-user.target
-      notify: reload systemd
-      tags: redis_service_create
-    - name: edit sysctl.conf
-      blockinfile:
-        path: /etc/sysctl.conf
-        block: |
-          vm.overcommit_memory = 1
-          net.core.somaxconn = 512
-          net.ipv4.icmp_echo_ignore_all = 0
-          fs.file-max = 1000000
-          net.ipv4.tcp_max_tw_buckets = 2000000
-        marker: "#### {mark} ADDED BY OPP INSTALLATION ####"
-        backup: yes
-        state: present
-      tags: edit_sysctl_conf
-    - name: edit sysctl.conf ip_local_port_range
-      ansible.builtin.lineinfile:
-        path: /etc/sysctl.conf
-        regexp: '^#?net\.ipv4\.ip_local_port_range'
-        line: 'net.ipv4.ip_local_port_range = 1024 65535'
-        state: present
-      tags: edit_sysctl_conf_ip_local_port_range
-    - name: reload sysctl
-      shell: sysctl -p
-      tags: reload_sysctl
-    - name: edit rc.local
-      blockinfile:
-        path: /etc/rc.local
-        block: |
-          echo never > /sys/kernel/mm/transparent_hugepage/enabled
-        marker: "#### {mark} ADDED BY OPP INSTALLATION ####"
-        backup: no
-        state: present
-      tags: edit_rc_local
-    - name: add redis account
-      ansible.builtin.user:
-        name: redis
-        shell: /bin/false
-        create_home: no
-        state: present
-        system: yes
-      tags: add_redis_account
-    - name: copy redis config
-      ansible.builtin.copy:
-        src: "{{ software_dest_path }}/redis-5.0.3/redis.conf"
-        dest: /etc/redis.conf
-        remote_src: yes
-        owner: redis
-        group: redis
-      tags: copy_redis_config
-    - name: edit redis config supervised
-      ansible.builtin.replace:
-        path: /etc/redis.conf
-        regexp: '^supervised no'
-        replace: 'supervised systemd'
-      tags: edit_redis_config_supervised
-    - name: edit redis config protected-mode
-      ansible.builtin.replace:
-        path: /etc/redis.conf
-        regexp: '^protected-mode yes'
-        replace: 'protected-mode no'
-      tags: edit_redis_config_protected_mode
-    - name: edit redis config dir
-      ansible.builtin.replace:
-        path: /etc/redis.conf
-        regexp: '^dir \./'
-        replace: 'dir /opt/redis'
-      tags: edit_redis_config_dir
-    - name: edit redis config requirepass
-      ansible.builtin.replace:
-        path: /etc/redis.conf
-        regexp: '^# requirepass foobared'
-        replace: 'requirepass StrongP@@ssw0rd123!'
-      tags: edit_redis_config_requirepass
-    - name: edit redis config logfile
-      ansible.builtin.replace:
-        path: /etc/redis.conf
-        regexp: '^logfile ""$'
-        replace: 'logfile /var/log/redis/redis.log'
-      tags: edit_redis_config_logfile
-    - name: edit redis config pidfile
-      ansible.builtin.replace:
-        path: /etc/redis.conf
-        regexp: '^pidfile /var/run/redis_6379\.pid'
-        replace: 'pidfile /run/redis/redis-server.pid'
-      tags: edit_redis_config_pidfile
-    - name: create opt redis dir
-      ansible.builtin.file:
-        path: /opt/redis
-        state: directory
-        owner: redis
-        group: redis
-      tags: create_opt_redis_dir
     - name: create redis_bak dir
       become: yes
       ansible.builtin.file:
