--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1246,6 +1246,14 @@
         mode: '0755'
         recurse: yes
       tags: chown_squid_shell
+    - name: create shell_prod dir
+      ansible.builtin.file:
+        path: /opt/shell_prod
+        state: directory
+        owner: logreader
+        group: logreader
+        mode: '0755'
+      tags: create_shell_prod_dir
     - name: create logrotate dir
       become: yes
       ansible.builtin.file:
