--- a/squid.conf
+++ b/squid.conf
@@ -6,25 +6,27 @@ error_directory /opt/squid/share/errors/en
 #2#######2：工作进程,CPU######################
 workers 16
 cpu_affinity_map process_numbers=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16 cores=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16
+#cpu_affinity_map process_numbers=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40 cores=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40
 
 
 #3#######3: 文件描述符,内存限制 ###############
 ##max_filedesc 65535
+##maximum_object_size_in_memory 8 MB
 max_filedesc 500000
 
 
+
 #4#######4: 缓存配置 ##########################
-cache_dir rock /opt/squid/var/spool/squid 10240 swap-timeout=300
+cache_dir rock /opt/squid/var/spool/squid 5120 swap-timeout=300
 
 #cache_mem 2048 MB
-cache_mem 2 GB
+cache_mem  32 GB
 coredump_dir /opt/squid/var/coredumps
 #cache_dir ufs /opt/squid/var/spool/squid 3000 16 256
 maximum_object_size 6 MB
 minimum_object_size 1 MB
 
-cache_effective_user squid
-cache_effective_group squid
+
 
 #5#######5: 持久连接配置 ######################
 client_persistent_connections on
@@ -63,24 +65,16 @@ request_timeout 180 seconds
 #icap_send_client_username on
 #icap_preview_enable on
 #icap_preview_size 1024
-#icap_service svc_clamav reqmod_precache icap://192.168.153.203:1344/squidclamav bypass=off
+#icap_service svc_clamav reqmod_precache icap://127.0.0.1:1344/squidclamav bypass=off
 #adaptation_access svc_clamav allow all
 
-#icap_service svc_resp respmod_precache icap://192.168.153.203:1344/squidclamav bypass=off
+#icap_service svc_resp respmod_precache icap://127.0.0.1:1344/squidclamav bypass=off
 #adaptation_access svc_resp allow all
 
-#dns_nameservers 127.0.0.1
-
-## 建议的缓存 TTL（按需微调）
-#positive_dns_ttl 6 hours
-#negative_dns_ttl 5 minutes
-#fqdncache_size 8192
-#ipcache_size 16384
-
-## （可选）尽早触发 DNS 解析，让 RPZ 更前置
-##acl force_dns dst 0.0.0.0/0 ::/0
-##http_access allow force_dns
-
+######## 允许本地管理访问 #####################
+http_access allow localhost manager
+#http_access allow localnet manager
+http_access deny manager
 
 #######################################################################################################################################################
 #                                                                                                                                                    ##
@@ -88,20 +82,28 @@ request_timeout 180 seconds
 #                                                                                                                                                    ##
 #######################################################################################################################################################
 
+#http_access allow all
 #天际友盟提供的url黑名单
-acl tianji-blacklist dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/botnet.txt"
-acl tianji-blacklist dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/c2.txt"
-acl tianji-blacklist dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/gambling.txt"
-acl tianji-blacklist dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/malicious_website.txt"
-acl tianji-blacklist dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/phishing.txt"
-acl tianji-blacklist dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/porn.txt"
-acl tianji-blacklist dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/ransomware.txt"
-acl tianji-blacklist dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/special_web.txt"
+acl tianji-blacklist dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/botnet.txt"
+acl tianji-blacklist dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/c2.txt"
+acl tianji-blacklist dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/gambling.txt"
+acl tianji-blacklist dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/malicious_website.txt"
+acl tianji-blacklist dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/phishing.txt"
+acl tianji-blacklist dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/porn.txt"
+acl tianji-blacklist dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/ransomware.txt"
+acl tianji-blacklist dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/special_web.txt"
 deny_info ERR_ACCESS_DENIED tianji-blacklist
 
+acl dst_url dstdomain js.sbs
+http_access deny dst_url
 
 #1.1####################################################################################################################################################
 #全局放行端口设置
+#acl SSL_ports port 443
+#acl Safe_ports port 80          # http
+#acl Safe_ports port 443         # https
+#acl Safe_ports port 563
+#acl Safe_ports port 1025-65535  # unregistered ports
 include /opt/squid/etc/global_ssl_port.inc
 include /opt/squid/etc/global_port.inc
 acl CONNECT method CONNECT
@@ -109,28 +111,17 @@ http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
 
 #free url
-#1.2 目的ip地址白名单
-acl dst_ip_alone dst "/usr/nginx/html/transproxy_admin/public/fileData/dst_ip_alone.txt"
+#1.1 目的ip地址白名单
+acl dst_ip_alone dst "/opt/nginx/html/transproxy_admin/public/fileData/dst_ip_alone.txt"
 http_access allow dst_ip_alone
 
 
-##acl free-test-domain-white dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/test.txt"
-##http_access allow free-test-domain-white
-
-
 #1.2 目的域名白名单
-acl free-domain-white dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/url-set.txt"
+acl free-domain-white dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/url-set.txt"
 http_access allow free-domain-white
-#http_access allow free-domain-white 
 
-#acl cors_preflight method OPTIONS
-#acl has_origin    req_header Origin .
-#acl has_acrm      req_header Access-Control-Request-Method .
-#external_acl_type origin_in_white_check ttl=3600 negative_ttl=360 children-max=100  %{Origin}>h  /usr/bin/python3 /opt/py_test_new/check_header_origin_in_whitelist.py
-#acl origin_in_white external origin_in_white_check
-#http_access allow cors_preflight has_origin has_acrm origin_in_white
-
-
+#1.3 DST Domain port white
+#include /opt/squid/etc/allow_freedomain.inc
 
 
 #来自于51a配置（参照那边写死加上去的）
@@ -148,56 +139,66 @@ http_access allow allowed_2 port5004
 #########################################################################################################################################################
 ##2.1  Source IP and range Special URL Policy
 ##针对源IP的精细化策略
-external_acl_type check_ip_allow_check ttl=0 negative_ttl=0 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_test_new/check_ip_allow.py
-external_acl_type check_ip_deny_check  ttl=0 negative_ttl=0 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_test_new/check_ip_deny.py
+external_acl_type check_ip_allow_check ttl=604800 negative_ttl=360 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_ip_allow.py
+external_acl_type check_ip_deny_check  ttl=604800 negative_ttl=360 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_ip_deny.py
 acl check_ip_allow external check_ip_allow_check
+#note TAG TAG_allow _source_ip_allow_check_
 acl check_ip_deny external check_ip_deny_check
+#note TAG TAG_deny _source_ip_deny_check_
 http_access allow check_ip_allow
 http_access deny check_ip_deny
 
 
 #2.2
 ##针对源IP段的精细化策略
-external_acl_type check_iprange_allow_check  ttl=0 negative_ttl=0 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_test_new/check_iprange_allow.py
-external_acl_type check_iprange_deny_check   ttl=0 negative_ttl=0 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_test_new/check_iprange_deny.py
+external_acl_type check_iprange_allow_check  ttl=604800 negative_ttl=360 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_iprange_allow.py
+external_acl_type check_iprange_deny_check   ttl=604800 negative_ttl=360 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_iprange_deny.py
+
 acl check_iprange_allow external check_iprange_allow_check
+#note acl_tag _source_ip_allow_check_
 acl check_iprange_deny  external check_iprange_deny_check
+#note acl_tag _source_ip_deny_check_
 http_access allow check_iprange_allow
 http_access deny check_iprange_deny
 
-##2.2.1 手动支持目标ip段的访问
-acl source-ip-txt src "/usr/nginx/html/transproxy_admin/public/fileData/source-ip.txt"
-acl dest-iprange-txt dst "/usr/nginx/html/transproxy_admin/public/fileData/dest-iprange.txt"
+
+#2.2.1
+acl source-ip-txt src "/opt/nginx/html/transproxy_admin/public/fileData/source-ip.txt"
+acl dest-iprange-txt dst "/opt/nginx/html/transproxy_admin/public/fileData/dest-iprange.txt"
 http_access allow source-ip-txt dest-iprange-txt
 
 #2.3 Source IP/Range Blocking list
 # source ip 黑名单
-acl source-ip-black src "/usr/nginx/html/transproxy_admin/public/fileData/ip-blacklist.txt"
+acl source-ip-black src "/opt/nginx/html/transproxy_admin/public/fileData/ip-blacklist.txt"
+#note acl_tag _source-ip-black_
 http_access deny source-ip-black
 # source iprange 的黑名单
-acl source-iprange-black src "/usr/nginx/html/transproxy_admin/public/fileData/ip-blacklist-range.txt"
+acl source-iprange-black src "/opt/nginx/html/transproxy_admin/public/fileData/ip-blacklist-range.txt"
 http_access deny source-iprange-black
 
 #2.4 Global URL Blacklist list
 # 不带端口的url全局黑名单
-acl domain-block dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/threat/url-blacklist.txt"
+acl domain-block dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/threat/url-blacklist.txt"
 http_access deny domain-block
+# 带端口的url+port 全局黑名单
+#include /opt/squid/etc/deny_ipdomainport.inc
 # 目的ip黑名单
-acl dst-ip-block dst "/usr/nginx/html/transproxy_admin/public/fileData/dest_ip_blacklist_squid.txt"
+acl dst-ip-block dst "/opt/nginx/html/transproxy_admin/public/fileData/dest_ip_blacklist_squid.txt"
 http_access deny dst-ip-block
 # 目的iprange黑名单
-acl dst-iprange-block dst "/usr/nginx/html/transproxy_admin/public/fileData/des-iprange-black.txt"
+acl dst-iprange-block dst "/opt/nginx/html/transproxy_admin/public/fileData/des-iprange-black.txt"
 http_access deny dst-iprange-block
 
 
 #3.1
 #DST IP 白名单
-acl dest-ip-white dst "/usr/nginx/html/transproxy_admin/public/fileData/dest_ip_whitelist_squid.txt"
+acl dest-ip-white dst "/opt/nginx/html/transproxy_admin/public/fileData/dest_ip_whitelist_squid.txt"
 http_access allow dest-ip-white
 #Dst Iprange 白名单
-acl dest-iprange-white dst "/usr/nginx/html/transproxy_admin/public/fileData/des-iprange-white.txt"
+acl dest-iprange-white dst "/opt/nginx/html/transproxy_admin/public/fileData/des-iprange-white.txt"
 http_access allow dest-iprange-white
-
+# Dst IP/URL +port White
+#include /opt/squid/etc/allow_ipdomainport.inc
 
 
 
@@ -207,26 +208,27 @@ acl user_agent_list dstdomain .websense.net .blackspider.com
 acl allow_user_agent browser -i ssbc|CCA|TACO
 http_access allow user_agent_list allow_user_agent
 #全局ua验证
-acl useragent-white req_header User-Agent -i "/usr/nginx/html/transproxy_admin/public/fileData/user_agent_list.txt"
+acl useragent-white req_header User-Agent -i "/opt/nginx/html/transproxy_admin/public/fileData/user_agent_list.txt"
 http_access allow useragent-white !tianji-blacklist
 
 #3.3 Source IP White list + 天际友盟规则
-acl source-ip-white src "/usr/nginx/html/transproxy_admin/public/fileData/ip-whitelist.txt"
+acl source-ip-white src "/opt/nginx/html/transproxy_admin/public/fileData/ip-whitelist.txt"
 http_access allow source-ip-white !tianji-blacklist
 # Source IP Range White list + 天际友盟规则
-acl source-iprange-white src "/usr/nginx/html/transproxy_admin/public/fileData/ip-whitelist-range.txt"
+acl source-iprange-white src "/opt/nginx/html/transproxy_admin/public/fileData/ip-whitelist-range.txt"
 http_access allow source-iprange-white !tianji-blacklist
 
-#3.4 Global Dst URL White list
-#跟3.4组合
-external_acl_type ua_dump ttl=0 negative_ttl=0 children-max=100 %DST %{User-Agent}>h /usr/bin/python3 /opt/py_test_new/check_ua.py
+#ua add
+external_acl_type ua_dump ttl=604800 negative_ttl=360 children-max=100 %DST %{User-Agent}>h /usr/bin/python3 /opt/py_prod/check_ua.py
 acl chrome_ua external ua_dump
-#http_access deny debug_ua 
 
-acl domain-white dstdomain "/usr/nginx/html/transproxy_admin/public/fileData/url-whitelist.txt"
+#3.4 Global Dst URL White list
+acl domain-white dstdomain "/opt/nginx/html/transproxy_admin/public/fileData/url-whitelist.txt"
 http_access allow domain-white !chrome_ua
 
-
+#ldap弹窗源IP列表
+acl stepup_ip src "/opt/nginx/html/transproxy_admin/public/fileData/specify_ip_pop_ldaps.txt"
+auth_schemes basic stepup_ip
 
 
 ######################################################################################################################################################
@@ -239,14 +241,17 @@ http_access allow domain-white !chrome_ua
 #4.Authentication
 #4.1 LDAPS
 include /opt/squid/etc/ldap_auth.conf
-#auth_param  basic program /opt/squid/libexec/basic_ldap_auth -R -b "dc=corp,dc=ha,dc=org,dc=hk" -D "cn=n5-proxy-opp-41a,ou=Users,ou=N2,ou=ITIS,dc=corp,dc=ha,dc=org,dc=hk" -W "/opt/squid/etc/ldap_password" -f sAMAccountName=%s -H ldaps://corprodc03.corp.ha.org.h
-k:636
-#1
+#auth_param  basic program /opt/squid/libexec/basic_ldap_auth -R -b "dc=corp,dc=ha,dc=org,dc=hk" -D "cn=n5-proxy-opp-41a,ou=Users,ou=N2,ou=ITIS,dc=corp,dc=ha,dc=org,dc=hk" -W "/opt/squid/etc/ldap_password" -f sAMAccountName=%s -H ldaps://corprodc03.corp.ha.org.hk:636
 auth_param basic realm "HA corp OPPTransproxy Authentication"
 auth_param basic credentialsttl 168 hours
 acl ldap_auth proxy_auth REQUIRED
-
 #http_access allow ldap-auth
+
+
+#   LDAP   组检查 (外部 ACL)
+#external_acl_type tp-ldaps-group %LOGIN /opt/squid/libexec/ext_ldap_group_acl -d -R -b "dc=corp,dc=ha,dc=org,dc=hk" -D "cn=n5-proxy-opp-41a,ou=Users,ou=N2,ou=ITLS,dc=corp,dc=ha,dc=org,dc=hk" -W "/opt/squid/etc/ldap_password" -f sAMAccountName=%s -h ldaps://corprodc03.corp.ha.org.hk:636 -g HA_Transparent_Proxy_Users_HAHO:HA_Transparent_Proxy_Users_HKEC:HA_Transparent_Proxy_Users_HKWC:HA_Transparent_Proxy_Users_KCC:HA_Transparent_Proxy_Users_KEC:HA_Transparent_Proxy_Users_KWC:HA_Transparent_Proxy_Users_NTEC:HA_Transparent_Proxy_Users_NTWC:HA_Transparent_Proxy_Users_VIP -D CORP.HA.ORG.HK
+#acl ldaps-tp-group external tp-ldaps-group
+#http_access allow ldaps-tp-group
 
 
 
@@ -267,38 +272,34 @@ include /opt/squid/etc/kerberos_auth.conf
 #http_access allow kerberos_auth
 
 
-
-#####ntlm####
-# 配置NTLM认证
-#auth_param ntlm program /usr/bin/ntlm_auth --helper-protocol=squid-2.5-ntlmssp
-#auth_param ntlm children 10
-##auth_param ntlm max_challenge_reuses 0
-##auth_param ntlm max_challenge_lifetime 2 minutes
-#acl ntlm_auth proxy_auth REQUIRED
-
 ######################################################################################################################################################
 #                                                                                                                                                   ##
 #                                                                  AD Group Mapping                                                                 ##
 #                                                                                                                                                   ##
 ######################################################################################################################################################
 
+#AD上网组
+#external_acl_type group_check children-startup=20 %LOGIN %URI /usr/bin/python3 /opt/py_prod/check_group.py
+#acl redis_group_allow external group_check
+#http_access allow redis_group_allow !tianji-blacklist
 
 #4.3
 #特殊组策略
 #特殊组allow如果是返回的OK就放行，比如allow .baidu.com:443，baidu.com就会放行，网站中的pdstatic.com就会走天际友盟，天际友盟没拒绝就放行
 #特殊组deny如果返回的是OK表示未命中策略，命中了deny就直接返回了ERR，走最后的deny all，这里不做deny处理，不然会弹窗
-external_acl_type special_user_allow_check  ttl=0 negative_ttl=0 children-max=100 %LOGIN %DST /usr/bin/python3 /opt/py_test_new/check_special_user_allow.py
+external_acl_type special_user_allow_check  ttl=604800 negative_ttl=360 children-max=100 %LOGIN %DST /usr/bin/python3 /opt/py_prod/check_special_user_allow.py
 acl special_user_allow external special_user_allow_check
 
-external_acl_type special_user_deny_check  ttl=0 negative_ttl=0 children-max=100 %LOGIN %DST /usr/bin/python3 /opt/py_test_new/check_special_user_deny.py
+external_acl_type special_user_deny_check  ttl=604800 negative_ttl=360 children-max=100 %LOGIN %DST /usr/bin/python3 /opt/py_prod/check_special_user_deny.py
 acl special_user_deny external special_user_deny_check
 http_access allow special_user_allow  #返回OK通过，这是为了考虑特殊组要跳过天际友盟的策略
 
 #5
 #上网组策略
 #在上网组就放行，不在上网组就拒绝
-external_acl_type check_user ttl=0 negative_ttl=0 children-max=100 %LOGIN %URI /usr/bin/python3 /opt/py_test_new/check_user.py
+external_acl_type check_user ttl=604800 negative_ttl=360 children-max=100 %LOGIN %URI /usr/bin/python3 /opt/py_prod/check_user.py
 acl internet_user_check external check_user
+
 http_access allow domain-white !internet_user_check
 
 ###http_access allow internet_group_check
@@ -312,11 +313,9 @@ http_access allow domain-white !internet_user_check
 #######################################################################################################################################################
 
 deny_info ERR_ACCESS_DENIED tianji-blacklist
-
+#http_access allow ldap_auth special_group_deny internet_group_check !tianji-blacklist-2
 http_access allow ldap_auth special_user_deny internet_user_check !tianji-blacklist
-http_access allow kerberos_auth special_user_deny internet_user_check  !tianji-blacklist 
-##http_access allow ntlm_auth special_user_deny internet_user_check !tianji-blacklist
-#http_access allow ntlm_auth special_user_deny internet_user_check
+http_access allow kerberos_auth special_user_deny internet_user_check  !tianji-blacklist
 
 http_access deny all
 
@@ -360,10 +359,6 @@ acl localnet src fe80::/10              # RFC 4291 link-local (directly plugged)
 ######## 拒绝非HTTPS的CONNECT请求 #############
 #http_access deny CONNECT !SSL_ports
 
-######## 允许本地管理访问 #####################
-http_access allow localhost manager
-#http_access allow localnet manager
-http_access deny manager
 
 
 ######## 保护本地服务 #########################
@@ -381,16 +376,11 @@ http_access allow localnet
 
 #access_log /opt/squid/var/log/access_iot.log HAsquidlog port_iot
 #access_log /opt/squid/var/log/access_kb.log HAsquidlog port_kb_ldap
-logformat HAsquidlog %>a %ui %un [%tl] "%rm %ru HTTP/%rv" %>Hs %<st %>p "%{Referer}>h" "%{User-Agent}>h" %Ss:%Sh %>Hs
-access_log /opt/squid/var/log/access.log HAsquidlog
 
 logformat acl_log %>a %ui %un [%tl] "%rm %ru HTTP/%rv" %>Hs %<st %>p "%{Referer}>h" "%{User-Agent}>h" %Ss:%Sh %>Hs
 access_log /opt/squid/var/log/access-tianji-blacklist.log acl_log tianji-blacklist
-
-#access_log /opt/squid/var/log/access-free_domain-white.log acl_log free-domain-white
-access_log /opt/squid/var/log/access-debug_ua acl_log chrome_ua
-
-
+logformat HAsquidlog %>a %ui %un [%tl] "%rm %ru HTTP/%rv" %>Hs %<st %>p "%{Referer}>h" "%{User-Agent}>h" %Ss:%Sh %>Hs
+access_log /opt/squid/var/log/access.log HAsquidlog
 cache_log /opt/squid/var/log/cache.log
 
 
@@ -408,3 +398,4 @@ debug_options ALL,1 33,2
 #logformat HAsquidlog %>a %ui %un [%tl] "%rm %ru HTTP/%rv" %>Hs %<st %>p "%{Referer}>h" "%{User-Agent}>h" %Ss:%Sh
 #dns_v4_first on
 #tcp_outgoing_address 0.0.0.0
+
