--- a/squid.conf
+++ b/squid.conf
@@ -139,8 +139,8 @@ http_access allow allowed_2 port5004
 #########################################################################################################################################################
 ##2.1  Source IP and range Special URL Policy
 ##针对源IP的精细化策略
-external_acl_type check_ip_allow_check ttl=604800 negative_ttl=360 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_ip_allow.py
-external_acl_type check_ip_deny_check  ttl=604800 negative_ttl=360 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_ip_deny.py
+external_acl_type check_ip_allow_check ttl=604800 negative_ttl=360 children-startup=5 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_ip_allow.py
+external_acl_type check_ip_deny_check  ttl=604800 negative_ttl=360 children-startup=5 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_ip_deny.py
 acl check_ip_allow external check_ip_allow_check
 #note TAG TAG_allow _source_ip_allow_check_
 acl check_ip_deny external check_ip_deny_check
@@ -151,8 +151,8 @@ http_access deny check_ip_deny
 
 #2.2
 ##针对源IP段的精细化策略
-external_acl_type check_iprange_allow_check  ttl=604800 negative_ttl=360 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_iprange_allow.py
-external_acl_type check_iprange_deny_check   ttl=604800 negative_ttl=360 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_iprange_deny.py
+external_acl_type check_iprange_allow_check  ttl=604800 negative_ttl=360 children-startup=5 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_iprange_allow.py
+external_acl_type check_iprange_deny_check   ttl=604800 negative_ttl=360 children-startup=5 children-max=100 %SRC %DST /usr/bin/python3 /opt/py_prod/check_iprange_deny.py
 
 acl check_iprange_allow external check_iprange_allow_check
 #note acl_tag _source_ip_allow_check_
@@ -219,7 +219,7 @@ acl source-iprange-white src "/opt/nginx/html/transproxy_admin/public/fileData/i
 http_access allow source-iprange-white !tianji-blacklist
 
 #ua add
-external_acl_type ua_dump ttl=604800 negative_ttl=360 children-max=100 %DST %{User-Agent}>h /usr/bin/python3 /opt/py_prod/check_ua.py
+external_acl_type ua_dump ttl=604800 negative_ttl=360 children-startup=5 children-max=100 %DST %{User-Agent}>h /usr/bin/python3 /opt/py_prod/check_ua.py
 acl chrome_ua external ua_dump
 
 #3.4 Global Dst URL White list
@@ -287,17 +287,17 @@ include /opt/squid/etc/kerberos_auth.conf
 #特殊组策略
 #特殊组allow如果是返回的OK就放行，比如allow .baidu.com:443，baidu.com就会放行，网站中的pdstatic.com就会走天际友盟，天际友盟没拒绝就放行
 #特殊组deny如果返回的是OK表示未命中策略，命中了deny就直接返回了ERR，走最后的deny all，这里不做deny处理，不然会弹窗
-external_acl_type special_user_allow_check  ttl=604800 negative_ttl=360 children-max=100 %LOGIN %DST /usr/bin/python3 /opt/py_prod/check_special_user_allow.py
+external_acl_type special_user_allow_check  ttl=604800 negative_ttl=360 children-startup=5 children-max=100 %LOGIN %DST /usr/bin/python3 /opt/py_prod/check_special_user_allow.py
 acl special_user_allow external special_user_allow_check
 
-external_acl_type special_user_deny_check  ttl=604800 negative_ttl=360 children-max=100 %LOGIN %DST /usr/bin/python3 /opt/py_prod/check_special_user_deny.py
+external_acl_type special_user_deny_check  ttl=604800 negative_ttl=360 children-startup=5 children-max=100 %LOGIN %DST /usr/bin/python3 /opt/py_prod/check_special_user_deny.py
 acl special_user_deny external special_user_deny_check
 http_access allow special_user_allow  #返回OK通过，这是为了考虑特殊组要跳过天际友盟的策略
 
 #5
 #上网组策略
 #在上网组就放行，不在上网组就拒绝
-external_acl_type check_user ttl=604800 negative_ttl=360 children-max=100 %LOGIN %URI /usr/bin/python3 /opt/py_prod/check_user.py
+external_acl_type check_user ttl=604800 negative_ttl=360 children-startup=5 children-max=100 %LOGIN %URI /usr/bin/python3 /opt/py_prod/check_user.py
 acl internet_user_check external check_user
 
 http_access allow domain-white !internet_user_check
