--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,8 +1,8 @@
 [opp_prod]
-192.168.152.121 custom_hostname=poxappprd52b src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52b_06A30D/poxappprd52b.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52b_06A30D/poxappprd52b.key logreader_password=P@ssw0rd123 crontab_reload_squid="10 0" crontab_upredis="30 23,13"
-192.168.152.122 custom_hostname=poxappprd52c src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52c_06A30E/poxappprd52c.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52c_06A30E/poxappprd52c.key logreader_password=P@ssw0rd123 crontab_reload_squid="20 0" crontab_upredis="30 23,13"
-192.168.152.123 custom_hostname=poxappprd52d src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52d_06A30F/poxappprd52d.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52d_06A30F/poxappprd52d.key logreader_password=P@ssw0rd123 crontab_reload_squid="30 0" crontab_upredis="30 23,13"
-192.168.152.124 custom_hostname=poxappprd52e src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52e_06A310/poxappprd52e.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52e_06A310/poxappprd52e.key logreader_password=P@ssw0rd123 crontab_reload_squid="40 0" crontab_upredis="30 23,13"
+192.168.152.121 custom_hostname=poxappprd52b src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52b_06A30D/poxappprd52b.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52b_06A30D/poxappprd52b.key logreader_password=P@ssw0rd123 crontab_reload_squid="10 0" crontab_upredis="30 *" crontab_upredis_bak="30 23,13"
+192.168.152.122 custom_hostname=poxappprd52c src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52c_06A30E/poxappprd52c.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52c_06A30E/poxappprd52c.key logreader_password=P@ssw0rd123 crontab_reload_squid="20 0" crontab_upredis="30 *" crontab_upredis_bak="30 23,13"
+192.168.152.123 custom_hostname=poxappprd52d src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52d_06A30F/poxappprd52d.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52d_06A30F/poxappprd52d.key logreader_password=P@ssw0rd123 crontab_reload_squid="30 0" crontab_upredis="30 *" crontab_upredis_bak="30 23,13"
+192.168.152.124 custom_hostname=poxappprd52e src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52e_06A310/poxappprd52e.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52e_06A310/poxappprd52e.key logreader_password=P@ssw0rd123 crontab_reload_squid="40 0" crontab_upredis="30 23,13" crontab_upredis_bak="30 23,13"
 [other_prod]
 172.24.150.146 custom_hostname=poxappprd52f
 172.24.150.147 custom_hostname=poxappprd52g
