--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -7,9 +7,9 @@
 172.24.150.146 custom_hostname=poxappprd52f
 172.24.150.147 custom_hostname=poxappprd52g
 [old_opp_prod]
-192.168.52.236 custom_hostname=poxappprd41a
-192.168.52.238 custom_hostname=poxappprd41b
-192.168.52.97 custom_hostname=poxappprd41c
-192.168.152.101 custom_hostname=poxappprd51a
-192.168.152.102 custom_hostname=poxappprd51b
-192.168.152.103 custom_hostname=poxappprd51c
+192.168.52.236 ansible_user=logreader custom_hostname=poxappprd41a
+192.168.52.238 ansible_user=logreader custom_hostname=poxappprd41b
+192.168.52.97 ansible_user=logreader custom_hostname=poxappprd41c
+192.168.152.101 ansible_user=logreader custom_hostname=poxappprd51a
+192.168.152.102 ansible_user=logreader custom_hostname=poxappprd51b
+192.168.152.103 ansible_user=logreader custom_hostname=poxappprd51c
